Project/Meta2/y.output
Terminals unused in grammar

   RESERVED


Grammar

    0 $accept: Prog $end

    1 Prog: ProgHeading SEMIC ProgBlock DOT

    2 ProgHeading: PROGRAM ID LBRAC OUTPUT RBRAC

    3 ProgBlock: VarPart FuncPart StatPart

    4 VarPart: VAR VarDeclaration SEMIC VarPartAux
    5        | %empty

    6 VarPartAux: VarDeclaration SEMIC VarPartAux
    7           | %empty

    8 VarDeclaration: IDList COLON ID

    9 IDList: ID IDAux

   10 IDAux: COMMA ID IDAux
   11      | %empty

   12 FuncPart: FuncDeclaration SEMIC FuncPart
   13         | %empty

   14 FuncDeclaration: FuncHeading SEMIC FORWARD
   15                | FuncIdent SEMIC FuncBlock
   16                | FuncHeading SEMIC FuncBlock

   17 FuncHeading: FUNCTION ID FormalParamList COLON ID
   18            | FUNCTION ID COLON ID

   19 FuncIdent: FUNCTION ID

   20 FormalParamList: LBRAC FormalParams FormalParamListAux RBRAC

   21 FormalParamListAux: SEMIC FormalParams FormalParamListAux
   22                   | %empty

   23 FormalParams: VAR IDList COLON ID
   24             | IDList COLON ID

   25 FuncBlock: VarPart StatPart

   26 StatPart: CompStat

   27 CompStat: BEGINTOKEN StatList END

   28 StatList: Stat StatListAux

   29 StatListAux: SEMIC Stat StatListAux
   30            | %empty

   31 Stat: CompStat
   32     | IF Expr THEN Stat ELSE Stat
   33     | IF Expr THEN Stat
   34     | WHILE Expr DO Stat
   35     | REPEAT StatList UNTIL Expr
   36     | VAL LBRAC PARAMSTR LBRAC Expr RBRAC COMMA ID RBRAC
   37     | ID ASSIGN Expr
   38     | WRITELN WritelnPList
   39     | WRITELN
   40     | %empty

   41 WritelnPList: LBRAC WritelnPListAux1 WritelnPListAux2 RBRAC

   42 WritelnPListAux1: Expr
   43                 | STRING

   44 WritelnPListAux2: COMMA WritelnPListAux1 WritelnPListAux2
   45                 | %empty

   46 Expr: Expr OR Expr
   47     | Expr AND Expr
   48     | Expr DIFF Expr
   49     | Expr DIV Expr
   50     | Expr MOREEQUAL Expr
   51     | Expr LESSEQUAL Expr
   52     | Expr MOD Expr
   53     | Expr '=' Expr
   54     | Expr '+' Expr
   55     | Expr '-' Expr
   56     | Expr '/' Expr
   57     | Expr '*' Expr
   58     | Expr '<' Expr
   59     | Expr '>' Expr
   60     | '+' Expr
   61     | '-' Expr
   62     | NOT Expr
   63     | LBRAC Expr RBRAC
   64     | INTLIT
   65     | REALLIT
   66     | ID ParamList
   67     | ID

   68 ParamList: LBRAC Expr ParamListAux RBRAC

   69 ParamListAux: COMMA Expr ParamListAux
   70             | %empty


Terminals, with rules where they appear

$end (0) 0
'*' (42) 57
'+' (43) 54 60
'-' (45) 55 61
'/' (47) 56
'<' (60) 58
'=' (61) 53
'>' (62) 59
error (256)
PROGRAM (258) 2
OUTPUT (259) 2
VAR (260) 4 23
FUNCTION (261) 17 18 19
BEGINTOKEN (262) 27
IF (263) 32 33
THEN (264) 32 33
ELSE (265) 32
WHILE (266) 34
DO (267) 34
REPEAT (268) 35
UNTIL (269) 35
PARAMSTR (270) 36
NOT (271) 62
RESERVED (272)
ASSIGN (273) 37
END (274) 27
VAL (275) 36
FORWARD (276) 14
WRITELN (277) 38 39
AND (278) 47
OR (279) 46
MOD (280) 52
DIV (281) 49
DIFF (282) 48
MOREEQUAL (283) 50
LESSEQUAL (284) 51
SEMIC (285) 1 4 6 12 14 15 16 21 29
COLON (286) 8 17 18 23 24
DOT (287) 1
LBRAC (288) 2 20 36 41 63 68
RBRAC (289) 2 20 36 41 63 68
COMMA (290) 10 36 44 69
ID (291) 2 8 9 10 17 18 19 23 24 36 37 66 67
STRING (292) 43
REALLIT (293) 65
INTLIT (294) 64


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
Prog (48)
    on left: 1, on right: 0
ProgHeading (49)
    on left: 2, on right: 1
ProgBlock (50)
    on left: 3, on right: 1
VarPart (51)
    on left: 4 5, on right: 3 25
VarPartAux (52)
    on left: 6 7, on right: 4 6
VarDeclaration (53)
    on left: 8, on right: 4 6
IDList (54)
    on left: 9, on right: 8 23 24
IDAux (55)
    on left: 10 11, on right: 9 10
FuncPart (56)
    on left: 12 13, on right: 3 12
FuncDeclaration (57)
    on left: 14 15 16, on right: 12
FuncHeading (58)
    on left: 17 18, on right: 14 16
FuncIdent (59)
    on left: 19, on right: 15
FormalParamList (60)
    on left: 20, on right: 17
FormalParamListAux (61)
    on left: 21 22, on right: 20 21
FormalParams (62)
    on left: 23 24, on right: 20 21
FuncBlock (63)
    on left: 25, on right: 15 16
StatPart (64)
    on left: 26, on right: 3 25
CompStat (65)
    on left: 27, on right: 26 31
StatList (66)
    on left: 28, on right: 27 35
StatListAux (67)
    on left: 29 30, on right: 28 29
Stat (68)
    on left: 31 32 33 34 35 36 37 38 39 40, on right: 28 29 32 33 34
WritelnPList (69)
    on left: 41, on right: 38
WritelnPListAux1 (70)
    on left: 42 43, on right: 41 44
WritelnPListAux2 (71)
    on left: 44 45, on right: 41 44
Expr (72)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 66 67, on right: 32 33 34 35 36 37 42 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 62 63 68 69
ParamList (73)
    on left: 68, on right: 66
ParamListAux (74)
    on left: 69 70, on right: 68 69


State 0

    0 $accept: . Prog $end

    PROGRAM  shift, and go to state 1

    Prog         go to state 2
    ProgHeading  go to state 3


State 1

    2 ProgHeading: PROGRAM . ID LBRAC OUTPUT RBRAC

    ID  shift, and go to state 4


State 2

    0 $accept: Prog . $end

    $end  shift, and go to state 5


State 3

    1 Prog: ProgHeading . SEMIC ProgBlock DOT

    SEMIC  shift, and go to state 6


State 4

    2 ProgHeading: PROGRAM ID . LBRAC OUTPUT RBRAC

    LBRAC  shift, and go to state 7


State 5

    0 $accept: Prog $end .

    $default  accept


State 6

    1 Prog: ProgHeading SEMIC . ProgBlock DOT

    VAR  shift, and go to state 8

    $default  reduce using rule 5 (VarPart)

    ProgBlock  go to state 9
    VarPart    go to state 10


State 7

    2 ProgHeading: PROGRAM ID LBRAC . OUTPUT RBRAC

    OUTPUT  shift, and go to state 11


State 8

    4 VarPart: VAR . VarDeclaration SEMIC VarPartAux

    ID  shift, and go to state 12

    VarDeclaration  go to state 13
    IDList          go to state 14


State 9

    1 Prog: ProgHeading SEMIC ProgBlock . DOT

    DOT  shift, and go to state 15


State 10

    3 ProgBlock: VarPart . FuncPart StatPart

    FUNCTION  shift, and go to state 16

    $default  reduce using rule 13 (FuncPart)

    FuncPart         go to state 17
    FuncDeclaration  go to state 18
    FuncHeading      go to state 19
    FuncIdent        go to state 20


State 11

    2 ProgHeading: PROGRAM ID LBRAC OUTPUT . RBRAC

    RBRAC  shift, and go to state 21


State 12

    9 IDList: ID . IDAux

    COMMA  shift, and go to state 22

    $default  reduce using rule 11 (IDAux)

    IDAux  go to state 23


State 13

    4 VarPart: VAR VarDeclaration . SEMIC VarPartAux

    SEMIC  shift, and go to state 24


State 14

    8 VarDeclaration: IDList . COLON ID

    COLON  shift, and go to state 25


State 15

    1 Prog: ProgHeading SEMIC ProgBlock DOT .

    $default  reduce using rule 1 (Prog)


State 16

   17 FuncHeading: FUNCTION . ID FormalParamList COLON ID
   18            | FUNCTION . ID COLON ID
   19 FuncIdent: FUNCTION . ID

    ID  shift, and go to state 26


State 17

    3 ProgBlock: VarPart FuncPart . StatPart

    BEGINTOKEN  shift, and go to state 27

    StatPart  go to state 28
    CompStat  go to state 29


State 18

   12 FuncPart: FuncDeclaration . SEMIC FuncPart

    SEMIC  shift, and go to state 30


State 19

   14 FuncDeclaration: FuncHeading . SEMIC FORWARD
   16                | FuncHeading . SEMIC FuncBlock

    SEMIC  shift, and go to state 31


State 20

   15 FuncDeclaration: FuncIdent . SEMIC FuncBlock

    SEMIC  shift, and go to state 32


State 21

    2 ProgHeading: PROGRAM ID LBRAC OUTPUT RBRAC .

    $default  reduce using rule 2 (ProgHeading)


State 22

   10 IDAux: COMMA . ID IDAux

    ID  shift, and go to state 33


State 23

    9 IDList: ID IDAux .

    $default  reduce using rule 9 (IDList)


State 24

    4 VarPart: VAR VarDeclaration SEMIC . VarPartAux

    ID  shift, and go to state 12

    $default  reduce using rule 7 (VarPartAux)

    VarPartAux      go to state 34
    VarDeclaration  go to state 35
    IDList          go to state 14


State 25

    8 VarDeclaration: IDList COLON . ID

    ID  shift, and go to state 36


State 26

   17 FuncHeading: FUNCTION ID . FormalParamList COLON ID
   18            | FUNCTION ID . COLON ID
   19 FuncIdent: FUNCTION ID .

    COLON  shift, and go to state 37
    LBRAC  shift, and go to state 38

    $default  reduce using rule 19 (FuncIdent)

    FormalParamList  go to state 39


State 27

   27 CompStat: BEGINTOKEN . StatList END

    BEGINTOKEN  shift, and go to state 27
    IF          shift, and go to state 40
    WHILE       shift, and go to state 41
    REPEAT      shift, and go to state 42
    VAL         shift, and go to state 43
    WRITELN     shift, and go to state 44
    ID          shift, and go to state 45

    $default  reduce using rule 40 (Stat)

    CompStat  go to state 46
    StatList  go to state 47
    Stat      go to state 48


State 28

    3 ProgBlock: VarPart FuncPart StatPart .

    $default  reduce using rule 3 (ProgBlock)


State 29

   26 StatPart: CompStat .

    $default  reduce using rule 26 (StatPart)


State 30

   12 FuncPart: FuncDeclaration SEMIC . FuncPart

    FUNCTION  shift, and go to state 16

    $default  reduce using rule 13 (FuncPart)

    FuncPart         go to state 49
    FuncDeclaration  go to state 18
    FuncHeading      go to state 19
    FuncIdent        go to state 20


State 31

   14 FuncDeclaration: FuncHeading SEMIC . FORWARD
   16                | FuncHeading SEMIC . FuncBlock

    VAR      shift, and go to state 8
    FORWARD  shift, and go to state 50

    $default  reduce using rule 5 (VarPart)

    VarPart    go to state 51
    FuncBlock  go to state 52


State 32

   15 FuncDeclaration: FuncIdent SEMIC . FuncBlock

    VAR  shift, and go to state 8

    $default  reduce using rule 5 (VarPart)

    VarPart    go to state 51
    FuncBlock  go to state 53


State 33

   10 IDAux: COMMA ID . IDAux

    COMMA  shift, and go to state 22

    $default  reduce using rule 11 (IDAux)

    IDAux  go to state 54


State 34

    4 VarPart: VAR VarDeclaration SEMIC VarPartAux .

    $default  reduce using rule 4 (VarPart)


State 35

    6 VarPartAux: VarDeclaration . SEMIC VarPartAux

    SEMIC  shift, and go to state 55


State 36

    8 VarDeclaration: IDList COLON ID .

    $default  reduce using rule 8 (VarDeclaration)


State 37

   18 FuncHeading: FUNCTION ID COLON . ID

    ID  shift, and go to state 56


State 38

   20 FormalParamList: LBRAC . FormalParams FormalParamListAux RBRAC

    VAR  shift, and go to state 57
    ID   shift, and go to state 12

    IDList        go to state 58
    FormalParams  go to state 59


State 39

   17 FuncHeading: FUNCTION ID FormalParamList . COLON ID

    COLON  shift, and go to state 60


State 40

   32 Stat: IF . Expr THEN Stat ELSE Stat
   33     | IF . Expr THEN Stat

    NOT      shift, and go to state 61
    LBRAC    shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64
    INTLIT   shift, and go to state 65
    '+'      shift, and go to state 66
    '-'      shift, and go to state 67

    Expr  go to state 68


State 41

   34 Stat: WHILE . Expr DO Stat

    NOT      shift, and go to state 61
    LBRAC    shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64
    INTLIT   shift, and go to state 65
    '+'      shift, and go to state 66
    '-'      shift, and go to state 67

    Expr  go to state 69


State 42

   35 Stat: REPEAT . StatList UNTIL Expr

    BEGINTOKEN  shift, and go to state 27
    IF          shift, and go to state 40
    WHILE       shift, and go to state 41
    REPEAT      shift, and go to state 42
    VAL         shift, and go to state 43
    WRITELN     shift, and go to state 44
    ID          shift, and go to state 45

    $default  reduce using rule 40 (Stat)

    CompStat  go to state 46
    StatList  go to state 70
    Stat      go to state 48


State 43

   36 Stat: VAL . LBRAC PARAMSTR LBRAC Expr RBRAC COMMA ID RBRAC

    LBRAC  shift, and go to state 71


State 44

   38 Stat: WRITELN . WritelnPList
   39     | WRITELN .

    LBRAC  shift, and go to state 72

    $default  reduce using rule 39 (Stat)

    WritelnPList  go to state 73


State 45

   37 Stat: ID . ASSIGN Expr

    ASSIGN  shift, and go to state 74


State 46

   31 Stat: CompStat .

    $default  reduce using rule 31 (Stat)


State 47

   27 CompStat: BEGINTOKEN StatList . END

    END  shift, and go to state 75


State 48

   28 StatList: Stat . StatListAux

    SEMIC  shift, and go to state 76

    $default  reduce using rule 30 (StatListAux)

    StatListAux  go to state 77


State 49

   12 FuncPart: FuncDeclaration SEMIC FuncPart .

    $default  reduce using rule 12 (FuncPart)


State 50

   14 FuncDeclaration: FuncHeading SEMIC FORWARD .

    $default  reduce using rule 14 (FuncDeclaration)


State 51

   25 FuncBlock: VarPart . StatPart

    BEGINTOKEN  shift, and go to state 27

    StatPart  go to state 78
    CompStat  go to state 29


State 52

   16 FuncDeclaration: FuncHeading SEMIC FuncBlock .

    $default  reduce using rule 16 (FuncDeclaration)


State 53

   15 FuncDeclaration: FuncIdent SEMIC FuncBlock .

    $default  reduce using rule 15 (FuncDeclaration)


State 54

   10 IDAux: COMMA ID IDAux .

    $default  reduce using rule 10 (IDAux)


State 55

    6 VarPartAux: VarDeclaration SEMIC . VarPartAux

    ID  shift, and go to state 12

    $default  reduce using rule 7 (VarPartAux)

    VarPartAux      go to state 79
    VarDeclaration  go to state 35
    IDList          go to state 14


State 56

   18 FuncHeading: FUNCTION ID COLON ID .

    $default  reduce using rule 18 (FuncHeading)


State 57

   23 FormalParams: VAR . IDList COLON ID

    ID  shift, and go to state 12

    IDList  go to state 80


State 58

   24 FormalParams: IDList . COLON ID

    COLON  shift, and go to state 81


State 59

   20 FormalParamList: LBRAC FormalParams . FormalParamListAux RBRAC

    SEMIC  shift, and go to state 82

    $default  reduce using rule 22 (FormalParamListAux)

    FormalParamListAux  go to state 83


State 60

   17 FuncHeading: FUNCTION ID FormalParamList COLON . ID

    ID  shift, and go to state 84


State 61

   62 Expr: NOT . Expr

    NOT      shift, and go to state 61
    LBRAC    shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64
    INTLIT   shift, and go to state 65
    '+'      shift, and go to state 66
    '-'      shift, and go to state 67

    Expr  go to state 85


State 62

   63 Expr: LBRAC . Expr RBRAC

    NOT      shift, and go to state 61
    LBRAC    shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64
    INTLIT   shift, and go to state 65
    '+'      shift, and go to state 66
    '-'      shift, and go to state 67

    Expr  go to state 86


State 63

   66 Expr: ID . ParamList
   67     | ID .

    LBRAC  shift, and go to state 87

    $default  reduce using rule 67 (Expr)

    ParamList  go to state 88


State 64

   65 Expr: REALLIT .

    $default  reduce using rule 65 (Expr)


State 65

   64 Expr: INTLIT .

    $default  reduce using rule 64 (Expr)


State 66

   60 Expr: '+' . Expr

    NOT      shift, and go to state 61
    LBRAC    shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64
    INTLIT   shift, and go to state 65
    '+'      shift, and go to state 66
    '-'      shift, and go to state 67

    Expr  go to state 89


State 67

   61 Expr: '-' . Expr

    NOT      shift, and go to state 61
    LBRAC    shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64
    INTLIT   shift, and go to state 65
    '+'      shift, and go to state 66
    '-'      shift, and go to state 67

    Expr  go to state 90


State 68

   32 Stat: IF Expr . THEN Stat ELSE Stat
   33     | IF Expr . THEN Stat
   46 Expr: Expr . OR Expr
   47     | Expr . AND Expr
   48     | Expr . DIFF Expr
   49     | Expr . DIV Expr
   50     | Expr . MOREEQUAL Expr
   51     | Expr . LESSEQUAL Expr
   52     | Expr . MOD Expr
   53     | Expr . '=' Expr
   54     | Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '<' Expr
   59     | Expr . '>' Expr

    THEN       shift, and go to state 91
    AND        shift, and go to state 92
    OR         shift, and go to state 93
    MOD        shift, and go to state 94
    DIV        shift, and go to state 95
    DIFF       shift, and go to state 96
    MOREEQUAL  shift, and go to state 97
    LESSEQUAL  shift, and go to state 98
    '='        shift, and go to state 99
    '<'        shift, and go to state 100
    '>'        shift, and go to state 101
    '+'        shift, and go to state 102
    '-'        shift, and go to state 103
    '*'        shift, and go to state 104
    '/'        shift, and go to state 105


State 69

   34 Stat: WHILE Expr . DO Stat
   46 Expr: Expr . OR Expr
   47     | Expr . AND Expr
   48     | Expr . DIFF Expr
   49     | Expr . DIV Expr
   50     | Expr . MOREEQUAL Expr
   51     | Expr . LESSEQUAL Expr
   52     | Expr . MOD Expr
   53     | Expr . '=' Expr
   54     | Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '<' Expr
   59     | Expr . '>' Expr

    DO         shift, and go to state 106
    AND        shift, and go to state 92
    OR         shift, and go to state 93
    MOD        shift, and go to state 94
    DIV        shift, and go to state 95
    DIFF       shift, and go to state 96
    MOREEQUAL  shift, and go to state 97
    LESSEQUAL  shift, and go to state 98
    '='        shift, and go to state 99
    '<'        shift, and go to state 100
    '>'        shift, and go to state 101
    '+'        shift, and go to state 102
    '-'        shift, and go to state 103
    '*'        shift, and go to state 104
    '/'        shift, and go to state 105


State 70

   35 Stat: REPEAT StatList . UNTIL Expr

    UNTIL  shift, and go to state 107


State 71

   36 Stat: VAL LBRAC . PARAMSTR LBRAC Expr RBRAC COMMA ID RBRAC

    PARAMSTR  shift, and go to state 108


State 72
